--- a/core/raw_data.yml
+++ b/core/raw_data.yml
@@ -22,25 +22,32 @@ hours:
 
 # <course, room_type, lecturer, units>
 course_mapping: 
-  - ["cloud","A","l5",2]
-  - ["sta","TP","l5",2]
-  - ["soa","TP","l5",1]
-  - ["ia","A","l2",2]
-  - ["indx","A","l2",1]
-  - ["sma","TP","l5",1]
-  - ["bigData","TP","l5",1]
-  - ["entrep","TP","l5",1]
-  - ["fr","A","l1",1]
-  - ["ga","A","l3",1]
-  - ["verif","A","l3",1]
-  - ["mc1","A","l0",2]
-  - ["mc","A","l3",2]
-  - ["eng","A","l4",1]
-  - ["tp_inx","A","l3",2]
-  - ["tp_ga","TP","l5",2]
-  - ["mini_ga","A","l3",1]
-  - ["mini_ds","A","l3",1]
-  
+  - ["cloud",  "A", "l5", 2]
+  - ["sta",    "TP","l5", 2]
+  - ["soa",    "TP","l5", 1]
+  - ["ia",     "A", "l2", 2]
+  - ["indx",   "A", "l2", 1]
+  - ["sma",    "TP","l5", 1]
+  - ["bigData","TP","l5", 1]
+  - ["entrep", "TP","l5", 1]
+  - ["fr",     "A", "l1", 1]
+  - ["ga",     "A", "l3", 1]
+  - ["verif",  "A", "l3", 1]
+  - ["mc1",    "A", "l0", 2]
+  - ["mc",     "A", "l3", 2]
+  - ["eng",    "A", "l4", 1]
+  - ["tp_inx", "A", "l3", 2]
+  - ["tp_ga",  "TP","l5", 2]
+  - ["mini_ga","A", "l3", 1]
+  - ["mini_ds","A", "l3", 1]
+
+rooms:
+  type:
+    - A
+    - TP
+  number:
+    - 50
+    - 50
   
   
   
